--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "name": "back-end",
   "description": "",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
